[package]
name = "looper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rand = { version = "0.8.5" }
regex = "1.11.0"
once_cell = "1.20.2"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
panic = "abort"